@@ -27,4 +27,12 @@ class ApplicationController < ActionController::Base
       @current_user = nil
     end
   end
+
+  def scrub_order(model, params_order, default_order)
+    (params_column, params_direction) = params_order.to_s.strip.downcase.split(' ')
+    direction = (params_direction == 'desc' ? 'DESC' : nil)
+    column_name = (model.column_names.collect{|c| model.table_name + "." + c}.select{|c| c == params_column}.first)
+    order = column_name.blank? ? default_order : [column_name, direction].compact.join(' ')
+    order
+  end
 end
