@@ -9,10 +9,17 @@ class TagsController < ApplicationController
 
     tag_scope = tag_scope.with_project(@project.id, current_user.id) if @project = current_user.all_viewable_projects.find_by_id(params[:project_id])
 
-    @order = Tag.column_names.collect{|column_name| "tags.#{column_name}"}.include?(params[:order].to_s.split(' ').first) ? params[:order] : "tags.name"
+    @order = scrub_order(Tag, params[:order], 'tags.name')
     tag_scope = tag_scope.order(@order)
 
+    @count = tag_scope.count
     @tags = tag_scope.page(params[:page]).per( 20 ) #current_user.tags_per_page)
+
+    respond_to do |format|
+      format.html # index.html.erb
+      format.js
+      format.json { render json: @tags }
+    end
   end
 
   def show
