@@ -1,6 +1,6 @@
 class UsersController < ApplicationController
   before_filter :authenticate_user!
-  before_filter :check_system_admin, only: [:new, :create, :edit, :update, :destroy, :overall_graph]
+  before_filter :check_system_admin, only: [:new, :create, :edit, :update, :destroy, :overall_graph, :graph]
 
   def api_token
     if User::VALID_API_TOKENS.include?(params[:api_token])
@@ -87,12 +87,17 @@ class UsersController < ApplicationController
       return
     end
     current_user.update_attribute :users_per_page, params[:users_per_page].to_i if params[:users_per_page].to_i >= 10 and params[:users_per_page].to_i <= 200
-    @order = params[:order].blank? ? 'users.current_sign_in_at DESC' : params[:order]
+
     user_scope = User.current
     @search_terms = (params[:search] || params[:q]).to_s.gsub(/[^0-9a-zA-Z]/, ' ').split(' ')
     @search_terms.each{|search_term| user_scope = user_scope.search(search_term) }
+
+    @order = scrub_order(User, params[:order], 'users.current_sign_in_at DESC')
     user_scope = user_scope.order(@order)
+
+    @count = user_scope.count
     @users = user_scope.page(params[:page]).per(current_user.users_per_page)
+
     respond_to do |format|
       format.html
       format.js
