@@ -1,4 +1,4 @@
-<%= render partial: 'layouts/per_page', locals: { type: 'groups' } %>
+<%= render partial: 'layouts/per_page', locals: { type: 'groups', object_count: @count } %>
 
 <table class="table table-striped table-bordered" style="width:100%">
   <thead>
