@@ -1,10 +1,4 @@
-<%#= render partial: 'layouts/per_page', locals: { type: 'tags' } %>
-<div class="pagination pagination-right">
-  <ul>
-    <li class="disabled"><a href="#">Per Page</a></li>
-    <li class="active per_page"><%= link_to 20, "#" %></li>
-  </ul>
-</div>
+<%= render partial: 'contour/layouts/per_page', locals: { type: 'tags', object_count: @count } %>
 
 <table class="table table-striped table-bordered" style="width:100%">
   <thead>
