@@ -1,4 +1,4 @@
-<%= render partial: 'layouts/per_page', locals: { type: 'templates' } %>
+<%= render partial: 'layouts/per_page', locals: { type: 'templates', object_count: @count } %>
 
 <table class="table table-striped table-bordered" style="width:100%"><col width="10%"/><col width="10%"/><col width="80%"/><col width="1%"/>
   <thead>
